--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "drova-launcher"
-version = "0.9.7"
-description = "A Tauri App"
-authors = ["you"]
-edition = "2021"
+version = "1.0.0"
+description = "Timber Launcher"
+authors = ["xrzvs"]
+edition = "2026"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
